syntax = "proto3";
package pb;
option go_package = "./pb";
enum KlineType{
  Unknown=0;
  //1分钟
  Min1=1;
  //5分钟
  Min5=2;
  //10分钟
  Min10=3;
  //15分钟
    Min15=4;
  //30分钟
  Min30=5;
  //1小时
  Hour1=6;
  //4小时
  Hour4=7;
  //1天
  Day1=8;
  //1周
  Week1=9;
  //1个月
  Month1=10;
}

message GetKlineReq{
  //开始时间
  int64 start_time=1;
  //结束时间
  int64 ent_time=2;
  //k线类型
  KlineType kline_type=3;
  //交易对
  string symbol=4;
}
message GetKlineResp{
  message Kline{
    //开
    string open=1;
    //高
    string high=2;
    //低
    string low=3;
    //收
    string close=4;
    //成交额 计价币数量
    string volume=5;
    //成交量 基础币数量
    string amount=6;
    //开始时间
    int64 start_time=7;
    //结束时间
    int64 end_time=8;
    //涨跌幅
    string range=9;
    //交易对
    string symbol=10;
  }
  repeated Kline kline_list=1;
}

service KlineService {
  //获取k线
  rpc GetKline(GetKlineReq)returns(GetKlineResp);
}